--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -37,8 +37,21 @@
             android:layout_below="@id/relStatusBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/wvShowMun"></WebView>
+            android:id="@+id/wvShowMun"
+            android:layout_above="@id/btnInputAnswer"></WebView>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/btnInputAnswer"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="정답 입력"
+            android:textColor="#fff"
+            android:background="@drawable/button_input_answer"/>
 
 
 
