--- a/app/src/main/res/layout/activity_input_answer.xml
+++ b/app/src/main/res/layout/activity_input_answer.xml
@@ -82,14 +82,14 @@
                             android:elevation="10dp"
                             android:layout_margin="5dp"
                             android:text="1"
-                            android:id="@+id/inputAnswer1"
+                            android:id="@+id/btnInputAnswer1"
                             android:textSize="20dp"/>
                         <Button
                             android:layout_height="match_parent"
                             android:background="@drawable/button_answer"
                             android:elevation="10dp"
                             android:layout_margin="5dp"
-                            android:id="@+id/inputAnswer2"
+                            android:id="@+id/btnInputAnswer2"
                             android:text="2"
                             android:textSize="20dp"/>
                     </TableRow>
@@ -100,7 +100,7 @@
                             android:background="@drawable/button_answer"
                             android:elevation="10dp"
                             android:layout_margin="5dp"
-                            android:id="@+id/inputAnswer3"
+                            android:id="@+id/btnInputAnswer3"
                             android:text="3"
                             android:textSize="20dp"/>
                         <Button
@@ -108,7 +108,7 @@
                             android:background="@drawable/button_answer"
                             android:elevation="10dp"
                             android:layout_margin="5dp"
-                            android:id="@+id/inputAnswer4"
+                            android:id="@+id/btnInputAnswer4"
                             android:text="4"
                             android:textSize="20dp"/>
                     </TableRow>
@@ -119,18 +119,19 @@
                             android:background="@drawable/button_answer"
                             android:elevation="10dp"
                             android:layout_margin="5dp"
-                            android:id="@+id/inputAnswer5"
+                            android:id="@+id/btnInputAnswer5"
                             android:text="5"
                             android:textSize="20dp"/>
+
                         <Button
+                            android:id="@+id/btnInputAnswerSkip"
                             android:layout_height="match_parent"
+                            android:layout_margin="5dp"
                             android:background="@drawable/button_answer_gray"
                             android:elevation="10dp"
-                            android:layout_margin="5dp"
                             android:text="Skip!"
-                            android:id="@+id/inputAnswerSkip"
                             android:textColor="#fff"
-                            android:textSize="20dp"/>
+                            android:textSize="20dp" />
                     </TableRow>
                 </TableLayout>
             </LinearLayout>
