--- a/app/src/main/res/layout/activity_input_data.xml
+++ b/app/src/main/res/layout/activity_input_data.xml
@@ -67,25 +67,19 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/relSelectBox">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="모의고사 입력"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/relSelectBox"
-                android:id="@+id/relAnswerBox">
+                android:id="@+id/relAnswerBox"
+                android:layout_marginTop="40dp">
                 <LinearLayout
-                    android:padding="10dp"
                     android:layout_centerHorizontal="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/layout_gray_line"
                     android:id="@+id/relChooseTest"
                     android:orientation="horizontal"
+                    android:paddingRight="30dp"
+                    android:paddingLeft="30dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
                     android:gravity="center">
                     <Spinner
                         android:layout_width="wrap_content"
@@ -94,7 +88,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="25sp"
+                        android:textSize="20sp"
                         android:text="년 "/>
                     <Spinner
                         android:layout_width="wrap_content"
@@ -103,15 +97,41 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="25sp"
+                        android:textSize="20sp"
                         android:text="월 모의고사"/>
                 </LinearLayout>
-                <Button
-                    android:layout_below="@id/relChooseTest"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="정답 바로 입력"
-                    android:id="@+id/btnDirectInputAnswer"/>
+                    android:layout_below="@id/relChooseTest"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="20dp">
+                    <Button
+                        android:layout_below="@id/relChooseTest"
+                        android:layout_width="0dp"
+                        android:layout_marginLeft="50dp"
+                        android:layout_height="wrap_content"
+                        android:text="정답 바로 입력"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:layout_marginRight="10dp"
+                        android:elevation="5dp"
+                        android:background="@drawable/background_main_button"
+                        android:id="@+id/btnDirectInputAnswer"/>
+                    <Button
+                        android:layout_below="@id/relChooseTest"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="50dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_main_button_point"
+                        android:text="풀면서 입력"
+                        android:id="@+id/btnInputAnswer"/>
+
+                </LinearLayout>
 
             </RelativeLayout>
             <RelativeLayout
