--- a/app/src/main/res/layout/activity_input_data.xml
+++ b/app/src/main/res/layout/activity_input_data.xml
@@ -138,11 +138,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/relSendBox"
-                android:layout_below="@id/relAnswerBox">
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center">
                 <Button
+                    android:layout_marginBottom="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/btnSendData"
+                    android:padding="20dp"
+                    android:elevation="5dp"
+                    android:background="@drawable/background_main_button"
                     android:text="입력한 모의고사 분석하기"/>
             </RelativeLayout>
 
