--- a/app/src/main/res/layout/sheet_button.xml
+++ b/app/src/main/res/layout/sheet_button.xml
@@ -1,79 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+
+
+
     <LinearLayout
-        android:layout_above="@id/linControlBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
         android:orientation="vertical">
-        <TableLayout
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:stretchColumns="*">
-            <TableRow
-                android:layout_weight="1">
-                <Button
-                    android:layout_height="match_parent"
-                    android:background="@drawable/button_answer"
-                    android:elevation="10dp"
-                    android:layout_margin="5dp"
-                    android:text="1"
-                    android:id="@+id/btnInputAnswer1"
-                    android:textSize="20dp"/>
-                <Button
-                    android:layout_height="match_parent"
-                    android:background="@drawable/button_answer"
-                    android:elevation="10dp"
-                    android:layout_margin="5dp"
-                    android:id="@+id/btnInputAnswer2"
-                    android:text="2"
-                    android:textSize="20dp"/>
-            </TableRow>
-            <TableRow
-                android:layout_weight="1">
-                <Button
-                    android:layout_height="match_parent"
-                    android:background="@drawable/button_answer"
-                    android:elevation="10dp"
-                    android:layout_margin="5dp"
-                    android:id="@+id/btnInputAnswer3"
-                    android:text="3"
-                    android:textSize="20dp"/>
-                <Button
-                    android:layout_height="match_parent"
-                    android:background="@drawable/button_answer"
-                    android:elevation="10dp"
-                    android:layout_margin="5dp"
-                    android:id="@+id/btnInputAnswer4"
-                    android:text="4"
-                    android:textSize="20dp"/>
-            </TableRow>
-            <TableRow
-                android:layout_weight="1">
-                <Button
-                    android:layout_height="match_parent"
-                    android:background="@drawable/button_answer"
-                    android:elevation="10dp"
-                    android:layout_margin="5dp"
-                    android:id="@+id/btnInputAnswer5"
-                    android:text="5"
-                    android:textSize="20dp"/>
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/btnButtonAnswer"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="정답 입력"
+            android:textColor="#fff"
+            android:background="@drawable/button_input_answer"/>
+        <LinearLayout
+            android:layout_above="@id/linControlBox"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical">
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:stretchColumns="*">
+                <TableRow
+                    android:layout_weight="1">
+                    <Button
+                        android:layout_height="match_parent"
+                        android:background="@drawable/button_answer"
+                        android:elevation="10dp"
+                        android:layout_margin="5dp"
+                        android:text="1"
+                        android:id="@+id/btnInputAnswer1"
+                        android:textSize="20dp"/>
+                    <Button
+                        android:layout_height="match_parent"
+                        android:background="@drawable/button_answer"
+                        android:elevation="10dp"
+                        android:layout_margin="5dp"
+                        android:id="@+id/btnInputAnswer2"
+                        android:text="2"
+                        android:textSize="20dp"/>
+                </TableRow>
+                <TableRow
+                    android:layout_weight="1">
+                    <Button
+                        android:layout_height="match_parent"
+                        android:background="@drawable/button_answer"
+                        android:elevation="10dp"
+                        android:layout_margin="5dp"
+                        android:id="@+id/btnInputAnswer3"
+                        android:text="3"
+                        android:textSize="20dp"/>
+                    <Button
+                        android:layout_height="match_parent"
+                        android:background="@drawable/button_answer"
+                        android:elevation="10dp"
+                        android:layout_margin="5dp"
+                        android:id="@+id/btnInputAnswer4"
+                        android:text="4"
+                        android:textSize="20dp"/>
+                </TableRow>
+                <TableRow
+                    android:layout_weight="1">
+                    <Button
+                        android:layout_height="match_parent"
+                        android:background="@drawable/button_answer"
+                        android:elevation="10dp"
+                        android:layout_margin="5dp"
+                        android:id="@+id/btnInputAnswer5"
+                        android:text="5"
+                        android:textSize="20dp"/>
 
-                <Button
-                    android:id="@+id/btnInputAnswerSkip"
-                    android:layout_height="match_parent"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/button_answer_gray"
-                    android:elevation="10dp"
-                    android:text="Skip!"
-                    android:textColor="#fff"
-                    android:textSize="20dp" />
-            </TableRow>
-        </TableLayout>
+                    <Button
+                        android:id="@+id/btnInputAnswerSkip"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:background="@drawable/button_answer_gray"
+                        android:elevation="10dp"
+                        android:text="Skip!"
+                        android:textColor="#fff"
+                        android:textSize="20dp" />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
+
+
     </LinearLayout>
 
-
-</LinearLayout>
+</layout>
