--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
     android:background="#fff"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2.5"
@@ -25,9 +25,9 @@
         android:background="@drawable/background_main">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_margin="30dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_above="@id/frmMessageBox"
             android:orientation="vertical"
             android:gravity="center|left|bottom">
             <TextView
@@ -42,10 +42,11 @@
         </LinearLayout>
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="30dp">
+            android:layout_above="@id/relSettingBox"
+            android:id="@+id/frmMessageBox"
+            android:layout_margin="20dp">
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -62,8 +63,22 @@
 
 
         </FrameLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/relSettingBox"
+            android:layout_alignParentBottom="true">
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/button_setting"
+                android:background="#00000000"
+                android:padding="20dp"
+                android:layout_marginBottom="30dp"/>
+        </RelativeLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
