--- a/app/src/main/res/layout/sheet_button.xml
+++ b/app/src/main/res/layout/sheet_button.xml
@@ -7,7 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -23,7 +25,7 @@
         <LinearLayout
             android:layout_above="@id/linControlBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:orientation="vertical">
             <TableLayout
@@ -90,6 +92,51 @@
                         android:textSize="20dp" />
                 </TableRow>
             </TableLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linLongControlBox"
+            android:layout_below="@id/linInputBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="#fff"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_gray_round_line"
+                android:layout_height="wrap_content"
+                android:text="이전 문제"
+                android:textSize="13dp"
+                android:id="@+id/btnLongPrevQuestion"
+                android:textStyle="bold"
+                android:textColor="#000"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_gray_round_line"
+                android:layout_height="wrap_content"
+                android:text="그만하기"
+                android:id="@+id/btnLongStop"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:textSize="13dp"
+                android:textStyle="bold"
+                android:textColor="#000"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/box_point"
+                android:layout_height="wrap_content"
+                android:text="다음 문제"
+                android:id="@+id/btnLongNextQuestion"
+                android:textSize="13dp"
+                android:textStyle="bold"
+                android:textColor="#fff"/>
         </LinearLayout>
 
 
